fixed animations fade in/out

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="work-dropdown" id="workDropdown">
       <div class="dropdown-item" id="project1">
         <img src="icons/agency.png" alt="Matte Black Dept" class="folder-icon">
-        <span class="folder-title">Matte Black Dept (Creative Agency)</span>
+        <span class="folder-title">Matte Black Dept<br class="mobile-break"> (Creative Agency)</span>
       </div>
       <div class="dropdown-item" id="project2">
         <img src="icons/brand.png" alt="Minu" class="folder-icon">
@@ -62,7 +62,7 @@
       </div>
       <div class="dropdown-item" id="project3">
         <img src="icons/crypto.png" alt="Klyra" class="folder-icon">
-        <span class="folder-title">Klyra (Prime Crypto Brokerage)</span>
+        <span class="folder-title">Klyra<br class="mobile-break"> (Prime Crypto Brokerage)</span>
       </div>
     </div>
 
