--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
         <h2 class="gallery-title">Gallery</h2>
         <button class="gallery-close" id="galleryClose">×</button>
       </div>
+      <div class="gallery-loading" id="galleryLoading">
+        <div class="loading-text">Loading Gallery...</div>
+      </div>
       <div class="gallery-grid" id="galleryGrid">
         <!-- Photos will be dynamically loaded here -->
       </div>
