--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
     <div class="games-dropdown" id="gamesDropdown">
       <div class="dropdown-item" id="assassinsCreed">
-        <img src="icons/creed.png" alt="Assassin's Creed" class="folder-icon">
-        <span class="folder-title">Assassin's Creed</span>
+        <img src="icons/creed.png" alt="Assassin's Creed II" class="folder-icon">
+        <span class="folder-title">Assassin's Creed II</span>
       </div>
       <div class="dropdown-item" id="nba2k16">
         <img src="icons/2K16.png" alt="NBA 2K16" class="folder-icon">
@@ -133,7 +133,7 @@
         <div class="disc-line top"></div>
         <div class="disc-message">
           Please insert disc<br>
-          (This was my favourite game tho)
+          (My favourite line: "Nothing is true. Everything is permitted")
         </div>
 
         <button class="go-back-button" id="goBackButton">Go back</button>
