--- a/index.html
+++ b/index.html
@@ -145,6 +145,23 @@
       </div>
     </div>
 
+    <div class="browser-modal" id="browserModal">
+      <div class="browser-window">
+        <div class="browser-header">
+          <div class="browser-tab">
+            <span class="tab-text">Ryan "Minu" Sim</span>
+          </div>
+          <div class="browser-url">
+            <span class="url-text">https://en.wikipedia.org/wiki/Ryan_Sim</span>
+          </div>
+          <button class="browser-close" id="browserClose">×</button>
+        </div>
+        <div class="browser-content" id="browserContent">
+          <img src="wikipedia.webp" alt="Ryan Sim Wikipedia" class="wikipedia-image">
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
