--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
           </div>
           <button class="browser-close" id="browserClose">×</button>
         </div>
+        <div class="browser-loading" id="browserLoading">
+          <div class="loading-bar-container">
+            <div class="loading-bar" id="loadingBar"></div>
+          </div>
+          <div class="loading-percentage" id="loadingPercentage">0%</div>
+        </div>
         <div class="browser-content" id="browserContent">
           <img src="wikipedia.webp" alt="Ryan Sim Wikipedia" class="wikipedia-image">
         </div>
