--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <div class="browser-window">
         <div class="browser-header">
           <div class="browser-tab">
-            <span class="tab-text">Ryan "Minu" Sim</span>
+            <span class="tab-text">My Wiki</span>
           </div>
           <div class="browser-url">
             <span class="url-text">https://en.wikipedia.org/wiki/Ryan_Sim</span>
@@ -166,7 +166,180 @@
           <button class="browser-close" id="browserClose">×</button>
         </div>
         <div class="browser-content">
-          <img src="wikipedia.jpeg" alt="Ryan Sim Wikipedia" class="wikipedia-image">
+          <header class="wiki-topbar">
+            <div class="wiki-topbar__brand">
+              <img src="wikipedia-images/mywiki-logo.png" alt="My Wiki" class="wiki-logo">
+              <span>My Wiki</span>
+            </div>
+            <form class="wiki-topbar__search" role="search" aria-label="Search article">
+              <input id="wikiSearch" type="search" placeholder="Search in page">
+            </form>
+          </header>
+
+          <main class="wiki-page">
+            <article class="wiki-article">
+              <h1 class="wiki-article__title">Ryan <span class="wiki-quote">"Minu"</span> Sim <a href="#" class="wiki-edit">[ edit ]</a></h1>
+
+              <p class="wiki-lead">
+                I'm <a href="#">Ryan</a>, but some people call me by my Korean name, <a href="#">Minu</a>.
+                I'm 21, based in <a href="https://en.wikipedia.org/wiki/Los_Angeles" target="_blank">Los Angeles</a>, after bouncing around
+                <a href="https://en.wikipedia.org/wiki/New_Jersey" target="_blank">Jersey</a>, <a href="https://en.wikipedia.org/wiki/New_York_City" target="_blank">New York</a>, <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Korea</a>, and <a href="https://en.wikipedia.org/wiki/Texas" target="_blank">Texas</a>. These days I build in crypto and make things.
+                <sup class="wiki-ref" data-ref="1">[1]</sup>
+              </p>
+
+              <nav id="wikiToc" class="wiki-toc" aria-label="Table of contents">
+                <div class="wiki-toc-title">Contents</div>
+                <a href="#wiki-how-it-started" class="wiki-toc-link">1 How it Started</a>
+                <a href="#wiki-growing-up" class="wiki-toc-link">2 Growing Up!</a>
+                <a href="#wiki-uni-kinda" class="wiki-toc-link">3 University.. Kinda?</a>
+                <a href="#wiki-references" class="wiki-toc-link">4 References</a>
+              </nav>
+
+              <section id="wiki-how-it-started" class="wiki-section">
+                <h2 class="wiki-section__title">How it Started <a href="#" class="wiki-edit">[ edit ]</a></h2>
+                <div class="wiki-figure wiki-figure--right">
+                  <img src="wikipedia-images/childhood.png" alt="Kid drawing at a desk">
+                  <figcaption>Ryan at age 6</figcaption>
+                </div>
+                <p>
+                  As a kid, my mom encouraged me to try everything—<a href="https://en.wikipedia.org/wiki/Association_football" target="_blank">soccer</a> (my favorite), music, art school, and the dreaded academics I never quite clicked with. While I was far from the model student, something from those afternoons sketching in art school managed to stay with me.
+                  <sup class="wiki-ref" data-ref="2">[2]</sup>
+                </p>
+                <p>
+                  I always wanted to be the fly in school, so I always saved a portion of my lunch money I got from my mom (sorry Mom!) and instead of buying a whole meal @lunch, I would save up that money with odd part-time jobs to get my first pair of <a href="https://en.wikipedia.org/wiki/Air_Jordan" target="_blank">Jordan 4 cements</a> ;).
+                  <sup class="wiki-ref" data-ref="3">[3]</sup>
+                </p>
+              </section>
+
+              <section id="wiki-growing-up" class="wiki-section">
+                <h2 class="wiki-section__title">Growing Up! <a href="#" class="wiki-edit">[ edit ]</a></h2>
+                <p>
+                  When I was 13, my family moved to <a href="https://en.wikipedia.org/wiki/Dallas" target="_blank">Dallas</a>, and that's where sneakers really became more than just something I liked—they became a hustle. I'll never forget flipping my first pair of <a href="#">Yeezy 350 V2 Zebras</a> the same day I bought them and walking away with $250 profit. For a 13-year-old, that was insane. From that day on, I was hooked.
+                  <sup class="wiki-ref" data-ref="4">[4]</sup>
+                </p>
+
+                <div class="wiki-sneaker-container">
+                  <div class="wiki-figure wiki-figure--inline">
+                    <img src="wikipedia-images/sneakers2.png" alt="First sneaker flip">
+                    <figcaption>First Sneaker Flip!!!</figcaption>
+                  </div>
+                  <div class="wiki-figure wiki-figure--inline">
+                    <img src="wikipedia-images/sneakers.png" alt="Personal shoe collection">
+                    <figcaption>Ryan's personal shoe collection in high school</figcaption>
+                  </div>
+                </div>
+
+                <p>
+                  What started as flipping sneakers turned into something bigger. I built a small <a href="https://en.wikipedia.org/wiki/Software_as_a_service" target="_blank">SaaS business</a> teaching people how to resell and spot retail arbitrage opportunities online. Then <a href="https://en.wikipedia.org/wiki/COVID-19_pandemic" target="_blank">Covid</a> hit, and like everyone else, I suddenly had endless time at home. That's when I started diving into stocks and <a href="https://en.wikipedia.org/wiki/Cryptocurrency" target="_blank">crypto</a>. At first it was just curiosity, but over time it became part of my everyday rhythm.
+                  <sup class="wiki-ref" data-ref="5">[5]</sup>
+                </p>
+
+                <div class="wiki-figure wiki-figure--wide">
+                  <img src="wikipedia-images/overwatch.png" alt="Overwatch ranking">
+                  <figcaption>Loved gaming and 1 tricked Torb to top 500 (NA) in Overwatch</figcaption>
+                </div>
+              </section>
+
+              <section id="wiki-uni-kinda" class="wiki-section">
+                <h2 class="wiki-section__title">University.. Kinda? <a href="#" class="wiki-edit">[ edit ]</a></h2>
+                <p>
+                  At 18, I moved out of <a href="https://en.wikipedia.org/wiki/Dallas" target="_blank">Dallas</a> and tried the university route—studying <a href="https://en.wikipedia.org/wiki/Finance" target="_blank">Finance</a> and <a href="https://en.wikipedia.org/wiki/Mechanical_engineering" target="_blank">Mechanical Engineering</a> in 2022—while still running my SaaS agency and spending more time trading and learning about crypto. But the more I split my time between school and my own projects, the more obvious it became: my energy wasn't in the classroom. I wasn't giving 100% to either side, and it felt like a waste of momentum.
+                  <sup class="wiki-ref" data-ref="6">[6]</sup>
+                </p>
+                <p>
+                  So two months into my freshman year, I made the call to drop out and move to <a href="https://en.wikipedia.org/wiki/Los_Angeles" target="_blank">Los Angeles</a>.
+                </p>
+                <p>
+                  LA changed everything. I dove deeper into <a href="https://en.wikipedia.org/wiki/Non-fungible_token" target="_blank">NFTs</a>, but more importantly, I started meeting people who showed me you don't have to take the "safe" path of school → degree → job to build something real. It opened my eyes.
+                  <sup class="wiki-ref" data-ref="7">[7]</sup>
+                </p>
+                <p>
+                  I'd always wanted to start a clothing brand, but I knew if I was going to do it right, I had to actually learn how to make clothes from scratch—sourcing fabrics, pattern-making, cutting and sewing, embellishments, trims, finishing. It all became part of the process.
+                </p>
+                <div class="wiki-figure wiki-figure--right">
+                  <img src="wikipedia-images/nvdia.png" alt="Custom Nvidia hoodie">
+                  <figcaption>1 of 2 custom hoodies I made for Jensen @Nvidia + my client</figcaption>
+                </div>
+                <p>
+                  That's how <a href="#">Matte Black Dept</a> was born in early 2023. What started as a small clothing design and manufacturing studio has been growing into a full creative agency—helping brands, companies, and people connect with the right talent to bring their creative ideas to life.
+                  <sup class="wiki-ref" data-ref="8">[8]</sup>
+                </p>
+                <p>
+                  Most days, you'll find me in the LA studio sketching, experimenting, and building wild new concepts. Whether it's for Matte Black Dept or my personal brand, <a href="#">Minu</a> (<a href="#">@minuarchivee</a>), I'm always creating. And recently, in a full-circle moment, I found myself back in crypto—now building with <a href="#">@Klyra</a>.
+                  <sup class="wiki-ref" data-ref="9">[9]</sup>
+                </p>
+              </section>
+
+              <section id="wiki-references" class="wiki-section wiki-refs">
+                <h2 class="wiki-section__title">References</h2>
+                <ol class="wiki-refs__list" id="wikiRefs">
+                  <li id="wiki-ref-1">Interview clip about moving and building in crypto</li>
+                  <li id="wiki-ref-2">Notebook scans from early art school classes</li>
+                  <li id="wiki-ref-3">Receipt and photos from first Jordan 4 Cement purchase</li>
+                  <li id="wiki-ref-4">Yeezy 350 V2 Zebra resell transaction records from age 13</li>
+                  <li id="wiki-ref-5">SaaS business documentation and retail arbitrage tutorials</li>
+                  <li id="wiki-ref-6">University enrollment records - Finance & Mechanical Engineering 2022</li>
+                  <li id="wiki-ref-7">NFT collection and LA community connections archive</li>
+                  <li id="wiki-ref-8">Matte Black Dept founding documents and studio photos from early 2023</li>
+                  <li id="wiki-ref-9">Klyra team announcement and @minuarchivee social media archive</li>
+                </ol>
+              </section>
+            </article>
+
+            <aside class="wiki-infobox" aria-label="Infobox">
+              <table class="infobox-table">
+                <tbody>
+                  <tr>
+                    <th colspan="2" class="infobox-above">Ryan "Minu" Sim</th>
+                  </tr>
+                  <tr>
+                    <td colspan="2" class="infobox-image">
+                      <img src="wikipedia-images/portrait.png" alt="Portrait of Ryan Minu Sim">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2" class="infobox-caption">Ryan in Los Angeles, 2024</td>
+                  </tr>
+                  <tr>
+                    <th class="infobox-label">Born</th>
+                    <td class="infobox-data">December 12, 2003</td>
+                  </tr>
+                  <tr>
+                    <th class="infobox-label">Known For</th>
+                    <td class="infobox-data">Designing, Creative Direction</td>
+                  </tr>
+                  <tr>
+                    <th class="infobox-label">Personal website</th>
+                    <td class="infobox-data"><a href="https://ryansimarchive.com" target="_blank">ryansimarchive.com</a></td>
+                  </tr>
+                  <tr>
+                    <th colspan="2" class="infobox-header">Occupations</th>
+                  </tr>
+                  <tr>
+                    <td colspan="2" class="infobox-full-data">
+                      <div class="infobox-projects">
+                        <div>CEO / Founder of <a href="https://www.matteblackdept.com/" target="_blank">matteblackdept.com</a></div>
+                        <div>Creative Director / Clothing Designer of <a href="https://www.minuarchive.com/coming-soon" target="_blank">minuarchive.com</a></div>
+                        <div>CMO of <a href="https://x.com/klyra" target="_blank">klyra.com</a></div>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </aside>
+          </main>
+
+          <footer class="wiki-footer">
+            <a href="#" class="back-to-top" id="backToTop">Back to top</a>
+          </footer>
+
+          <div class="wiki-lightbox" id="wikiLightbox">
+            <div class="wiki-lightbox-content">
+              <button class="wiki-lightbox-close" id="wikiLightboxClose">×</button>
+              <img class="wiki-lightbox-image" id="wikiLightboxImage" src="" alt="">
+              <div class="wiki-lightbox-caption" id="wikiLightboxCaption"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
