--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
     <div class="about-dropdown" id="aboutDropdown">
       <div class="dropdown-item" id="bio">
-        <img src="icons/biography.png" alt="Biography" class="folder-icon">
-        <span class="folder-title">Biography</span>
+        <img src="icons/biography.png" alt="My Wiki" class="folder-icon">
+        <span class="folder-title">My Wiki</span>
       </div>
     </div>
 
