--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
 
           <main class="wiki-page">
             <article class="wiki-article">
-              <h1 class="wiki-article__title">Ryan <span class="wiki-quote">"Minu"</span> Sim <a href="#" class="wiki-edit">[ edit ]</a></h1>
+              <h1 class="wiki-article__title">Ryan <span class="wiki-quote"><em>"Minu"</em></span> Sim <a href="#" class="wiki-edit">[ edit ]</a></h1>
 
               <p class="wiki-lead">
-                I'm <a href="#">Ryan</a>, but some people call me by my Korean name, <a href="#">Minu</a>.
+                I'm <a href="https://instagram.com/ryansimarchive" target="_blank">Ryan</a>, but some people call me by my Korean name, <a href="https://instagram.com/ryansimarchive" target="_blank">Minu</a>.
                 I'm 21, based in <a href="https://en.wikipedia.org/wiki/Los_Angeles" target="_blank">Los Angeles</a>, after bouncing around
-                <a href="https://en.wikipedia.org/wiki/New_Jersey" target="_blank">Jersey</a>, <a href="https://en.wikipedia.org/wiki/New_York_City" target="_blank">New York</a>, <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Korea</a>, and <a href="https://en.wikipedia.org/wiki/Texas" target="_blank">Texas</a>. These days I build in crypto and make things.
+                <a href="https://en.wikipedia.org/wiki/New_Jersey" target="_blank">Jersey</a>, <a href="https://en.wikipedia.org/wiki/New_York_(state)" target="_blank">New York</a>, <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Korea</a>, and <a href="https://en.wikipedia.org/wiki/Texas" target="_blank">Texas</a>. These days I build in crypto and make things.
                 <sup class="wiki-ref" data-ref="1">[1]</sup>
               </p>
 
@@ -214,7 +214,7 @@
               <section id="wiki-growing-up" class="wiki-section">
                 <h2 class="wiki-section__title">Growing Up! <a href="#" class="wiki-edit">[ edit ]</a></h2>
                 <p>
-                  When I was 13, my family moved to <a href="https://en.wikipedia.org/wiki/Dallas" target="_blank">Dallas</a>, and that's where sneakers really became more than just something I liked—they became a hustle. I'll never forget flipping my first pair of <a href="#">Yeezy 350 V2 Zebras</a> the same day I bought them and walking away with $250 profit. For a 13-year-old, that was insane. From that day on, I was hooked.
+                  When I was 13, my family moved to <a href="https://en.wikipedia.org/wiki/Dallas" target="_blank">Dallas</a>, and that's where sneakers really became more than just something I liked—they became a hustle. I'll never forget flipping my first pair of <a href="https://en.wikipedia.org/wiki/Adidas_Yeezy#Yeezy_350" target="_blank">Yeezy 350 V2 Zebras</a> the same day I bought them and walking away with $250 profit. For a 13-year-old, that was insane. From that day on, I was hooked.
                   <sup class="wiki-ref" data-ref="4">[4]</sup>
                 </p>
 
@@ -261,11 +261,11 @@
                   <figcaption>1 of 2 custom hoodies I made for Jensen @Nvidia + my client</figcaption>
                 </div>
                 <p>
-                  That's how <a href="#">Matte Black Dept</a> was born in early 2023. What started as a small clothing design and manufacturing studio has been growing into a full creative agency—helping brands, companies, and people connect with the right talent to bring their creative ideas to life.
+                  That's how <a href="https://www.matteblackdept.com/" target="_blank">Matte Black Dept</a> was born in early 2023. What started as a small clothing design and manufacturing studio has been growing into a full creative agency—helping brands, companies, and people connect with the right talent to bring their creative ideas to life.
                   <sup class="wiki-ref" data-ref="8">[8]</sup>
                 </p>
                 <p>
-                  Most days, you'll find me in the LA studio sketching, experimenting, and building wild new concepts. Whether it's for Matte Black Dept or my personal brand, <a href="#">Minu</a> (<a href="#">@minuarchivee</a>), I'm always creating. And recently, in a full-circle moment, I found myself back in crypto—now building with <a href="#">@Klyra</a>.
+                  Most days, you'll find me in the LA studio sketching, experimenting, and building wild new concepts. Whether it's for Matte Black Dept or my personal brand, <a href="#">Minu</a> (<a href="https://instagram.com/minuarchivee" target="_blank">@minuarchivee</a>), I'm always creating. And recently, in a full-circle moment, I found myself back in crypto—now building with <a href="https://x.com/klyra" target="_blank">@Klyra</a>.
                   <sup class="wiki-ref" data-ref="9">[9]</sup>
                 </p>
               </section>
@@ -290,7 +290,7 @@
               <table class="infobox-table">
                 <tbody>
                   <tr>
-                    <th colspan="2" class="infobox-above">Ryan "Minu" Sim</th>
+                    <th colspan="2" class="infobox-above">Ryan <em>"Minu"</em> Sim</th>
                   </tr>
                   <tr>
                     <td colspan="2" class="infobox-image">
@@ -309,7 +309,7 @@
                     <td class="infobox-data">Designing, Creative Direction</td>
                   </tr>
                   <tr>
-                    <th class="infobox-label">Personal website</th>
+                    <th class="infobox-label">Personal Website</th>
                     <td class="infobox-data"><a href="https://ryansimarchive.com" target="_blank">ryansimarchive.com</a></td>
                   </tr>
                   <tr>
