changed wiki logo and fixed captions

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <div class="about-dropdown" id="aboutDropdown">
       <div class="dropdown-item" id="bio">
-        <img src="icons/biography.png" alt="My Wiki" class="folder-icon">
+        <img src="wikipedia-images/mywiki-logo.png" alt="My Wiki" class="folder-icon">
         <span class="folder-title">My Wiki</span>
       </div>
     </div>
